# sandbox

./: .gitmodules  README.md
c/hello-libuv/: .editorconfig  CMakeLists.txt  README.md  justfile  main.c
c/simple-server-libuv/: .env  .gitignore  CMakeLists.txt  README.md  justfile  main.c
c/tetris-sdl3/: CMakeLists.txt  CMakePresets.json  README.md  assets.c  assets.h  config.h  example_test.c  font.c  font.h  game.c  game.h  justfile  macros.h  main.c  main_menu.c  main_menu.h  mini_blocks.c  mini_blocks.h  music.c  music.h  resources.h  sound.c  sound.h  sprite.c  sprite.h  text.c  text.h  texture.c  texture.h
c/the_c_programming_language_2nd/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  exercise_1_12.c  exercise_1_13.c  exercise_1_15.c  exercise_1_16.c  exercise_1_18.c  exercise_1_19.c  exercise_1_2.c  exercise_1_3.c  exercise_1_4.c  exercise_1_6.c  section_1_1_2.c  section_1_2_t2.c  section_1_3.c  section_1_4_0.c  section_1_5_2_1.c  section_1_5_3.c  section_1_7.c
c/the_c_programming_language_2nd/src/: CMakeLists.txt
c/the_c_programming_language_2nd/src/chapter1/: CMakeLists.txt  exercise_1_10.c  exercise_1_12.c  exercise_1_13.c  exercise_1_14.c  exercise_1_15.c  exercise_1_16.c  exercise_1_17.c  exercise_1_18.c  exercise_1_19.c  exercise_1_2.c  exercise_1_20.c  exercise_1_21.c  exercise_1_22.c  exercise_1_23.c  exercise_1_24.c  exercise_1_3.c  exercise_1_4.c  exercise_1_5.c  exercise_1_6.c  exercise_1_7.c  exercise_1_8.c  exercise_1_9.c  section_1_10.c  section_1_2_0.c  section_1_2_1.c  section_1_2_2.c  section_1_5_1_0.c  section_1_5_1_1.c  section_1_5_2_0.c  section_1_5_4.c  section_1_6.c  section_1_8.c  section_1_9.c
c/the_c_programming_language_2nd/src/chapter2/: exercise_2_1.c  exercise_2_10.c  exercise_2_2.c  exercise_2_3.c  exercise_2_4.c  exercise_2_5.c  exercise_2_6.c  exercise_2_7.c  exercise_2_8.c  exercise_2_9.c
c/the_c_programming_language_2nd/src/chapter3/: CMakeLists.txt  exercise_3_1.c  exercise_3_2.c  exercise_3_3.c  exercise_3_4.c  exercise_3_5.c  exercise_3_6.c  section_3_3.c  section_3_5.c
c/the_c_programming_language_2nd/src/chapter4/: CMakeLists.txt  exercise_4_1.c  exercise_4_10.c  exercise_4_11.c  exercise_4_12.c  exercise_4_13.c  exercise_4_14.c  exercise_4_2.c  exercise_4_3.c  exercise_4_4.c  exercise_4_5.c  exercise_4_6.c  exercise_4_7.c  exercise_4_8.c  exercise_4_9.c  section_4_3.c  toy_1.c  wip_exercise_4_10.c  wip_exercise_4_6.c  wip_exercise_4_7.c  wip_exercise_4_8.c  wip_exercise_4_9.c
c/the_c_programming_language_2nd/src/chapter5/: exercise_5_1.c  exercise_5_2.c  exercise_5_3.c  exercise_5_4.c  exercise_5_5.c  exercise_5_6.c  exercise_5_7.c  exercise_5_8.c  exercise_5_9.c  section_5_10_1.c  section_5_10_2.c  section_5_10_3.c  section_5_2.c  section_5_4.c  section_5_6.c  section_5_7.c  wip_exercise_5_11.c  wip_exercise_5_12.c  wip_exercise_5_13.c  wip_exercise_5_14.c  wip_exercise_5_15.c  wip_exercise_5_16.c  wip_exercise_5_17.c  wip_exercise_5_18.c  wip_exercise_5_19.c  wip_exercise_5_20.c
c/the_c_programming_language_2nd/src/chapter6/: toy_1.c  toy_6_1.c  wip_exercise_6_1.c  wip_exercise_6_2.c  wip_exercise_6_3.c  wip_exercise_6_4.c  wip_exercise_6_5.c  wip_exercise_6_6.c
c/the_c_programming_language_2nd/src/chapter7/: CMakeLists.txt  wip_exercise_7_1.c  wip_exercise_7_2.c  wip_exercise_7_3.c  wip_exercise_7_4.c  wip_exercise_7_5.c  wip_exercise_7_6.c  wip_exercise_7_7.c  wip_exercise_7_8.c  wip_exercise_7_9.c
c/void-data-structs/: CMakeLists.txt  README.md  array.c  array.h  array_test.c  deque.c  deque.h  deque_test.c  justfile  main.c  stack.c  stack.h  stack_test.c
godot/: .editorconfig  .gitignore  pyproject.toml  tasks.py
godot/_scripts/: ci
godot/empty_window/: game.gd  project.godot
godot/tetris/: .editorconfig  config.gd.uid  game.gd.uid  game.tscn  icon.svg.import  justfile  project.godot
godot/tetris/assets/: Chewy.ttf.import  block.png.import  erase_lines.wav.import  fit_tetromino.wav.import  game_over.wav.import  game_start.wav.import  grid.png.import  main_menu_bg.png.import  main_music.ogg.import  menu_open.wav.import  mini_block.png.import  move_tetromino.wav.import  rotate_tetromino.wav.import
python/dj-simple-pagination/: .flake8  README.md  pyproject.toml  tasks.py
python/dj-simple-pagination/dj_simple_pagination/: asgi.py  settings.py  wsgi.py
python/dj-simple-pagination/polls/: admin.py  models.py
python/djfast-polls/: .gitignore  README.md  manage.py  pyproject.toml
python/djfast-polls/api/: routes.py  schemas.py
python/djfast-polls/djfast_polls/: asgi.py  settings.py  urls.py  wsgi.py
python/djfast-polls/polls/: models.py
python/fastapi/hello-clean-architecture/: pyproject.toml
python/fastapi/security-study/: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  security_study.py  tasks.py
python/hello-django/: .gitignore  docker-compose.yaml  pyproject.toml  tasks.py
python/hello-django/src/apiesome/: admin.py  (+2 more)
python/pygame/ttt/: pyproject.toml
python/ttt/: pyproject.toml  setup.cfg  tasks.py  ttt.py
python/ttt/assets/: spritesheet.aseprite  spritesheet.json
python/ttt/tests/: ttt_test.py
rust/bevy/: .env.example  .gitignore  Cargo.toml  README.md  justfile
rust/bevy/.cargo/: config.toml
rust/bevy/_scripts/: ci  clean.sh  fmt  lint  runwin.sh
rust/bevy/empty_window/: Cargo.toml
rust/bevy/hello_animated_sprite/: Cargo.toml
rust/bevy/hello_empty/: Cargo.toml
rust/bevy/hello_sprite/: Cargo.toml
rust/bevy/hello_square/: Cargo.toml
rust/bevy/move_animated_character/: Cargo.toml
rust/bevy/move_animated_sprite/: Cargo.toml
rust/bevy/move_sprite/: Cargo.toml
rust/bevy/move_square/: Cargo.toml
rust/bevy/simple_grid_move/: Cargo.toml
rust/bevy/simple_mouse_grab/: Cargo.toml
rust/bevy/simple_tilemap/: Cargo.toml
rust/bevy/simple_ui/: Cargo.toml
rust/simple-wgpu/: .gitignore  Cargo.toml  justfile
rust/simple-wgpu/src/: app.rs  lib.rs  main.rs  shader.wgsl  texture.rs
rust/simple2d/: Cargo.toml
rust/simple2d/scripts/: runwin.sh
rust/simple2d/src/: lib.rs  main.rs  shader.wgsl
(+219 files in other folders)
