[tool.poetry]
name = "godot"
version = "0.1.0"
description = ""
authors = ["Emerson MX <emersonmx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
gdtoolkit = "^3.3.1"
invoke = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
