[tool.poetry]
name = "djfast-polls"
version = "0.1.0"
description = ""
authors = ["Emerson MX <emersonmx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
