[tool.poetry]
name = "ttt"
version = "0.1.0"
description = ""
authors = ["Emerson Max de Medeiros Silva <emerson.silva@invillia.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.7.0"
jedi = "^0.18.0"
rope = "^0.18.0"
pytest = "^6.2.2"
coverage = "^5.4"
ipdb = "^0.13.4"
invoke = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
