[workspace]
resolver = "2"
members = [
  "empty_window",
  "move_animated_character",
  "move_sprite",
  "move_square",
  "simple_grid_move",
  "simple_mouse_grab",
  "simple_tilemap",
  "simple_ui",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
