[package]
name = "simple-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "29.0"
winit = "0.30"
image = { version = "0.25", features = ["png"] }
futures-executor = "0.3"

[dev-dependencies]
rstest = "0.26"
