[package]
name = "simple2d"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.90"
bytemuck = { version = "1.19", features = ["derive"] }
futures-executor = "0.3.31"
image = { version = "0.25.4", features = ["png"], default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = "22.1.0"
winit = { version = "0.30.5", features = ["rwh_06"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
