[tool.poetry]
name = "security-study"
version = "0.1.0"
description = ""
authors = ["Emerson Max de Medeiros Silva <emersonmx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.49.1"
coverage = "^6.4.1"
ipdb = "^0.13.9"
invoke = "^1.7.1"
pre-commit = "^2.19.0"
pyupgrade = "^2.34.0"
add-trailing-comma = "^2.2.3"
yesqa = "^1.3.0"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-print = "^5.0.0"
pep8-naming = "^0.13.0"
mypy = "^0.961"
vulture = "^2.5"
bandit = "^1.7.4"
types-passlib = "^1.7.6"
types-python-jose = "^3.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3

[tool.black]
line-length = 80

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
strict_concatenate = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tasks"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "invoke"
ignore_missing_imports = true

[tool.vulture]
min_confidence = 100
paths = ["."]
exclude = [".venv"]
