[package]
name = "move_animated_character"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benimator = "2.0.1"

[dependencies.bevy]
version = "0.6"
default-features = false
features = [
    "render",
    "bevy_winit",
    "x11",
    "png",
]
