[package]
name = "simple_grid_move"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"

[dependencies.bevy]
version = "0.6"
default-features = false
features = [
    "render",
    "bevy_winit",
    "x11",
    "png",
]
