add_executable(exercise_1_2 exercise_1_2.c)
add_executable(exercise_1_3 exercise_1_3.c)
add_executable(exercise_1_4 exercise_1_4.c)
add_executable(exercise_1_5 exercise_1_5.c)
add_executable(exercise_1_6 exercise_1_6.c)
add_executable(exercise_1_7 exercise_1_7.c)
add_executable(exercise_1_8 exercise_1_8.c)
add_executable(exercise_1_9 exercise_1_9.c)
add_executable(exercise_1_10 exercise_1_10.c)
add_executable(exercise_1_12 exercise_1_12.c)
add_executable(exercise_1_13 exercise_1_13.c)
add_executable(exercise_1_14 exercise_1_14.c)
add_executable(exercise_1_15 exercise_1_15.c)
add_executable(exercise_1_16 exercise_1_16.c)
add_executable(exercise_1_17 exercise_1_17.c)
add_executable(exercise_1_18 exercise_1_18.c)
add_executable(exercise_1_19 exercise_1_19.c)

add_executable(section_1_1_0 section_1_1_0.c)
add_executable(section_1_1_1 section_1_1_1.c)
add_executable(section_1_1_2 section_1_1_2.c)
add_executable(section_1_2_0 section_1_2_0.c)
add_executable(section_1_2_1 section_1_2_1.c)
add_executable(section_1_2_2 section_1_2_2.c)
add_executable(section_1_3 section_1_3.c)
add_executable(section_1_4 section_1_4.c)
add_executable(section_1_5_1_0 section_1_5_1_0.c)
add_executable(section_1_5_1_1 section_1_5_1_1.c)
add_executable(section_1_5_2_0 section_1_5_2_0.c)
add_executable(section_1_5_2_1 section_1_5_2_1.c)
add_executable(section_1_5_3 section_1_5_3.c)
add_executable(section_1_5_4 section_1_5_4.c)
add_executable(section_1_6 section_1_6.c)
add_executable(section_1_7 section_1_7.c)
add_executable(section_1_8 section_1_8.c)
add_executable(section_1_9 section_1_9.c)
